tdf#118139 Set Default StyleSheet only when available

Change-Id: Id8643895add3181c41737249326bb49e1a2c2493